--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'com.approvaltests:approvaltests:24.12.0'
+    implementation 'com.google.code.gson:gson:2.11.0'
 }
 
 tasks.named('test') {
